changed the code since resume not opening

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Vighneshwar_Kuru_Resume.pdf', '_blank')"
+            onclick="window.open('./assets/Vighneshwar_Kuru_Resume.pdf')"
           >
             Download CV
           </button>
