--- a/index.html
+++ b/index.html
@@ -255,25 +255,20 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Coming-soon.png"
+                src="assets/Project1.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">SQL GPT</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/MohdWaheed21/SQL_GPT'"
               >
                 Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+
             </div>
           </div>
           <div class="details-container color-container">
@@ -290,12 +285,6 @@
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
               </button>
             </div>
           </div>
@@ -314,12 +303,6 @@
                 onclick="location.href='https://github.com/'"
               >
                 Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
               </button>
             </div>
           </div>
